Bug 104552 - Applying table properties without explicitly modifying border color loses previous border color
Summary: Applying table properties without explicitly modifying border color loses pre...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.beta1
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0 target:5.3.1
Keywords: bibisected, bisected, regression
: 104727 105360 (view as bug list)
Depends on:
Blocks: Regressions-serie-commits
  Show dependency treegraph
 
Reported: 2016-12-10 12:53 UTC by madmalkav
Modified: 2017-01-26 11:58 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description madmalkav 2016-12-10 12:53:36 UTC
Description:
Applying table properties without explicitly modifying border color loses previous border color

Steps to Reproduce:
1.Change table border color to any different that black.
2.Apply.
3.Open table properties again, apply without changing nothing or changing other thing that the color.

Actual Results:  
The color setting is lost and boder color is reverted to black.

Expected Results:
Border color isn't changed.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.99 Safari/537.36
Comment 1 Aron Budea 2016-12-10 13:05:11 UTC
Confirmed with 5.3beta1, works fine with 5.2.0.4.
=> regression
Comment 2 Aron Budea 2016-12-11 23:08:15 UTC Comment hidden (bibisection)
Comment 3 Aron Budea 2016-12-11 23:12:09 UTC
This seems to have started with the color picker change.
Adding Cc: to Caolán McNamara, please take a look.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=64a708cba9b954afe3331f63c58218eb53b3d0ce
author	Caolán McNamara <caolanm@redhat.com>	2016-11-05 20:28:27 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-11-07 21:04:50 (GMT)

"Revert "Reverts a commit series that cripple windows ci."
with addition of...

- svxlo-SvxColorListBox
+ svxcorelo-SvxColorListBox

This reverts commit db380aab1063e8a5e40111c40ee9f7921aa82601."
Comment 4 Xisco Faulí 2017-01-23 19:41:13 UTC
*** Bug 105360 has been marked as a duplicate of this bug. ***
Comment 5 Aron Budea 2017-01-24 04:07:33 UTC
*** Bug 104727 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2017-01-24 16:14:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2eaaa8a578fff5770a99e3f8ee2a7c95c460891

Resolves: tdf#104552 table properties dialog drops previous border color

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2017-01-24 16:15:25 UTC
backport for 5-3 are in gerrit
Comment 8 Commit Notification 2017-01-26 11:58:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b8b744a4ea46a4e68383f9283e00f4de5fa8a1cf&h=libreoffice-5-3

Resolves: tdf#104552 table properties dialog drops previous border color

It will be available in 5.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.