Resolves: tdf#104552 table properties dialog drops previous border color

Change-Id: Ie39ea17fe56cc88efc65f6916aaeb1bd1b77c51f